Bug 1941820 - Don't allow src:local() lookups on Linux to find fontconfig patterns representing variable fonts, except for concrete named instances.  a=RyanVM

Original Revision: https://phabricator.services.mozilla.com/D235460

Differential Revision: https://phabricator.services.mozilla.com/D235471